implement match update in frontend
